--- a/App/dockerfile
+++ b/App/dockerfile
@@ -14,7 +14,7 @@ RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
 # add app
-COPY ./ticker ./
+ADD ./ticker ./
 
 EXPOSE 3000:3000
 
