--- a/App/dockerfile
+++ b/App/dockerfile
@@ -4,17 +4,19 @@ FROM node:13.12.0-alpine
 # set working directory
 WORKDIR /app
 
+ADD . ./app/ticker
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY ./ticker/package.json ./
-COPY ./ticker/package-lock.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+#COPY ./ticker/package.json ./
+#COPY ./ticker/package-lock.json ./
 
 # add app
-ADD ./ticker ./
+WORKDIR /app/ticker
+
+RUN npm install --silent
+RUN npm install react-scripts@3.4.1 -g --silent
 
 EXPOSE 3000:3000
 
